DarkIce next release

    o ported to FreeBSD (removed reference to MSG_NOSIGNAL in TcpSocket.cpp)
    o bug fix: maximum bitrate setting fixed for Ogg Vorbis streams
    o changed internals so that now each encoding/server connection is
      a separate thread

20-08-2002: DarkIce 0.11 released

    o added possibility to specify maximum bitrate for Ogg Vorbis streams
    o added HTTP Basic authentication for icecast2 logins
    o added mp3 streaming for icecast2
    o added possibility to stream in mono even when recording in stereo,
      thus enabling mono and stereo streams with the same darkice instance.
      only for mp3 streams at the moment
      thanks to Kai Krakow <kai@kaishome.de>
    o bug fix: resampling audio for vorbis streams bugs fixed

02-08-2002: DarkIce 0.10.1 released

    o bug fix: when the last server dropped connection, darkice crashed
      thanks to Nicu Pavel <npavel@ituner.com>
    o bug fix for LameLibEncoder: the mp3 encoding buffer was deleted too
      early, resulting in mp3 data corruption.
      thanks to Nicu Pavel <npavel@ituner.com>

20-07-2002: DarkIce 0.10 released

    o added possibility to select constant, average and variable bit rate
      encoding modes with specifying encoding quality as well.
      thanks to Nicu Pavel <npavel@ituner.com>
    o added support for Ogg Vorbis 1.0 final, removed support for rc2
    o added fault tolerance: if one of several server connection drops,
      DarkIce carries on with the rest of the servers still connected

09-04-2002: DarkIce 0.9.1 released

    o bugfix: a memory leak was introduced in 0.9, which is fixed thanks to
      Kristjan G. Bjarnason <kgb@gangverk.is> and Nicu Pavel <npavel@ituner.com>
    o minor documentation fix

28-03-2002: DarkIce 0.9 released

    o added possibility to simply read from the soundcard, encode, and
      save the encoded data into a local file (no streaming server needed)
    o added variable bitrate support for vorbis streams