@@ -4,6 +4,7 @@ DarkIce next release
     o bug fix: maximum bitrate setting fixed for Ogg Vorbis streams
     o changed internals so that now each encoding/server connection is
       a separate thread
+    o when a connection is dropped, DarkIce tries to reconnect, indefinitely
 
 20-08-2002: DarkIce 0.11 released
 
